# xtream-ai-assignment-developer

./: README.md  pyproject.toml
app/app/: settings.py
app/data_preparation/: apps.py  exceptions.py  services.py
app/data_preparation/management/commands/: import_csv_in_dataframe.py
app/data_preparation/services/: stage_1_import.py  stage_2_check.py  stage_3_normalize.py
app/model_training/: interfaces.py
app/model_training/training_models/: gradient_boosting.py  linear_regression.py
app/pipeline/: services.py
app/pipeline/management/commands/: execute_pipeline.py
